src/objects/filegen__Addenda_Record__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Addenda_Type_Code__c</fullName>
        <label>Addenda  Type  Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Entry_Detail_Sequence_Number__c</fullName>
        <label>Entry Detail Sequence  Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Free_Form__c</fullName>
        <label>Free  Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Record_Type__c</fullName>
        <label>Record  Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Special_Addenda_Sequence_Number__c</fullName>
        <label>Special Addenda Sequence  Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Addenda Record</label>
    <nameField>
        <displayFormat>AR-{0000000000}</displayFormat>
        <label>Addenda Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addenda Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>